--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "For beauty style",
   "main": "src/index.js",
   "dependencies": {
-    "webpack": "^2.2.1"
+    "express": "^4.15.2",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
+    "opn": "^4.0.2",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.1"
   },
   "devDependencies": {
     "css-loader": "^0.27.3",
@@ -18,7 +24,7 @@
   },
   "scripts": {
     "start": "node config/webpack.dev.conf.js",
-    "dev": "webpack --watch --color --progress --config config/webpack.dev.conf.js",
+    "dev": "node config/dev-server.js",
     "build": "webpack -p --color --progress --config config/webpack.prod.conf.js"
   },
   "repository": {
@@ -35,5 +41,9 @@
   "bugs": {
     "url": "https://github.com/hiyali/serra/issues"
   },
-  "homepage": "https://github.com/hiyali/serra#readme"
+  "homepage": "https://github.com/hiyali/serra#readme",
+  "engines": {
+    "node": ">= 6.0.0",
+    "npm": ">= 4.0.0"
+  }
 }
